--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -4,9 +4,8 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
-
-    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
+    
+    <link rel="stylesheet" href="css/styles.css">
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
@@ -20,8 +19,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Laserskärtekniken klarar snabba omställningar vilket ger flexibilitet i produktionen.">
-    <title>Ekshärads Water Jet AB</title>
+    
+    <title>Ekshärads Water Jet AB - Gas- och plasmaskärning</title>
+    <meta name="description" content="Vi skär med gas och plasma för snabb framtagning av grova ämnen.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ewj.nu/">
+    <meta property="og:title" content="Ekshärads Water Jet  AB">
+    <meta property="og:description" content="Vi skär med gas och plasma för snabb framtagning av grova ämnen.">
+    <meta property="og:image" content="twitter-logo.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ewj.nu/">
+    <meta property="twitter:title" content="Ekshärads Water Jet  AB">
+    <meta property="twitter:description" content="Vi skär med gas och plasma för snabb framtagning av grova ämnen.">
+    <meta property="twitter:image" content="twitter-logo.jpg">
 </head>
 <body>
     <sc-excep>Please use a device with larger screen to view the content.<hr></sc-excep>
@@ -49,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Bearbetning</a>
+                        <a id="de">Bearbetning</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -73,7 +87,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Maskinpark</a>
+                        <a id="de">Maskinpark</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -113,7 +127,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Företaget</a>
+                        <a id="de">Företaget</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -179,7 +193,7 @@
             <p>Plasmaskärningen utnyttjar en elektrisk ljusbåge mellan en elektrod, som inte smälter, och själva arbetsstycket. Elektroden är kopplad till minuspol på samma sätt som vid TIG-svetsning. Materialet i arbetsstycket behöver därför vara ledande. Ljusbågen blir koncentrerad genom att den omges av en vattenkyld dysa med trång öppning. Genom dysan strömmar plasmagas. Temperaturen i plasmaljusbågen kan bli mycket hög, typiskt upp till
                 30 000°C. Det smälta materialet blåses bort ur skärsnittet av den kraftiga plasmagasströmmen.
 
-            <p>Plasmaskärning kan utföras i alla vanliga metaller. Olegerat stål är de mest förekommande men även rostfritt och aluminium är vanligt, mycket på grund av de höga skärhastigheter som kan uppnås.</p></p>   
+            <p>Plasmaskärning kan utföras i de flesta vanliga metaller. Olegerat stål är de mest förekommande mycket på grund av de höga skärhastigheter som kan uppnås.</p></p>   
             <ul>
                 <li>
                     <p>Korta ledtider.</p>
@@ -196,7 +210,7 @@
 
             <h2 id="material-plasma">Material</h2>
             <p>Plasmaskärning tillåter skärning i de flesta metaller.</p>
-            <p>I våran plasmaskärmaskin kan vi skära upp till 45mm i godstjocklek i olegerat stål och upp till 30mm i rostfria stålsorter och aluminium. Tveka inte kontakta oss så hjälper vi dig välja skärmetod för bästa resultat.</p>
+            <p>I våran plasmaskärmaskin kan vi skära upp till 45mm i godstjocklek i olegerat stål / låglegerat stål. Tveka inte kontakta oss så hjälper vi dig välja skärmetod för bästa resultat.</p>
 
             <p>Vi kan skära i material så som:</p>
             <div class="material-grid">
@@ -216,21 +230,6 @@
                 </div>
 
                 <div class="material-box">
-                    <p>Aluminium</p>
-                    <ul id="reveal">
-                        <li>
-                            <p>6082</p>
-                        </li>
-                        <li>
-                            <p>5754</p>
-                        </li>
-                        <li>
-                            <p>ALUMEC</p>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="material-box">
                     <p>Slitstål</p>
                     <ul id="reveal">
                         <li>
@@ -241,21 +240,6 @@
                         </li>
                         <li>
                             <p>450HB</p>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="material-box">
-                    <p>Rostfritt</p>
-                    <ul id="reveal">
-                        <li>
-                            <p>1.4301</p>
-                        </li>
-                        <li>
-                            <p>1.4404</p>
-                        </li>
-                        <li>
-                            <p>253MA</p>
                         </li>
                     </ul>
                 </div>
