--- a/laser.html
+++ b/laser.html
@@ -5,8 +5,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
 
-    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
+    <link rel="stylesheet" href="css/styles.css">
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
@@ -20,8 +19,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Ekshärads Water Jet AB - Laserskärning</title>
     <meta name="description" content="Laserskärtekniken klarar snabba omställningar vilket ger flexibilitet i produktionen.">
-    <title>Ekshärads Water Jet AB</title>
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ewj.nu/">
+    <meta property="og:title" content="Ekshärads Water Jet  AB">
+    <meta property="og:description" content="Laserskärtekniken klarar snabba omställningar vilket ger flexibilitet i produktionen.">
+    <meta property="og:image" content="twitter-logo.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ewj.nu/">
+    <meta property="twitter:title" content="Ekshärads Water Jet  AB">
+    <meta property="twitter:description" content="Laserskärtekniken klarar snabba omställningar vilket ger flexibilitet i produktionen.">
+    <meta property="twitter:image" content="twitter-logo.jpg">
 </head>
 <body>
     <sc-excep>Please use a device with larger screen to view the content.<hr></sc-excep>
@@ -49,7 +63,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Bearbetning</a>
+                        <a id="de">Bearbetning</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -73,7 +87,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Maskinpark</a>
+                        <a id="de">Maskinpark</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -113,7 +127,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Företaget</a>
+                        <a id="de">Företaget</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
