--- a/maskinpark.html
+++ b/maskinpark.html
@@ -5,8 +5,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
 
-    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
+    <link rel="stylesheet" href="css/styles.css">
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
@@ -49,7 +48,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Bearbetning</a>
+                        <a id="de">Bearbetning</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -73,7 +72,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Maskinpark</a>
+                        <a id="de">Maskinpark</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -113,7 +112,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Företaget</a>
+                        <a id="de">Företaget</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -145,16 +144,60 @@
     </div>
     
     <section class="machine-heading machine-bg"></section>
-    <div class="machine-wrapper process-show">   
-        <div class="machine-container" id="kimtech-xy-large">
-            <div class="machine-content">
+    <div class="machine-wrapper">
+        <div class="machine-intro" id="maskinpark">
+            <h1>Maskinpark</h1>
+            <p>Ekshärads Water Jet erhåller en rad olika maskiner för att kunna göra era projekt till verklighet. <br> Från vattenskärmaskiner till rundvalsning, det mesta under ett tak.</p>
+        </div>
+        <div class="machine-side-wrapper">
+            <div class="machine-dom">
+                <ul>
+                    <li>
+                        <a href="#kimtech-xy-large">Kimtech XY Large</a>
+                    </li>
+
+                    <li>
+                        <a href="#kimtech-xy-medium">Kimtech XY Medium</a>
+                    </li>
+
+                    <li>
+                        <a href="#kimtech-xy-small">Kimtech XY Small</a>
+                    </li>
+
+                    <li>
+                        <a href="#prima-platino-cp400">Prima Platino CP400</a>
+                    </li>
+
+                    <li>
+                        <a href="#amada-ensis-3015-aj">AMADA ENSIS 3015 AJ</a>
+                    </li>
+
+                    <li>
+                        <a href="#baykal-hypertherm-260xd">Baykal HYPERTHERM 260XD</a>
+                    </li>
+
+                    <li>
+                        <a href="#amada-hfe-3i-2204">AMADA HFE 3i 2204</a>
+                    </li>
+
+                    <li>
+                        <a href="#sahinler-4r-hs-30-260">Sahinler 4R HS 30-260</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="machine-container">
+            <div class="machine-content" id="kimtech-xy-large">
                 <div class="machine-txt-container">
-                    <h3>Vattenskärning</h3>
-                    <h2>Kimtech XY Large</h2>
-                    <p><b>Typ: </b>Vattenskärmaskin</p>
-                    <p><b>Tryck: </b>60,000 PSI</p>
-                    <p><b>Skäryta: </b>Max 6000 x 3000 mm</p>
-                    <p><b>Skärmunstycken: </b>2st</p>
+                    <div>
+                        <h3>Vattenskärning</h3>
+                        <h2>Kimtech XY Large</h2>
+                        <p><b>Typ: </b>Vattenskärmaskin</p>
+                        <p><b>Tryck: </b>60,000 PSI</p>
+                        <p><b>Skäryta: </b>Max 6000 x 3000 mm</p>
+                        <p><b>Skärmunstycken: </b>2st</p>
+                        <p>Skär material upp till 200mm</p>
+                    </div>
                 </div>
 
                 <div class="machine-img-container">
@@ -172,24 +215,30 @@
                 </div>
 
                 <div class="machine-txt-container">
-                    <h3>Vattenskärning</h3>
-                    <h2>Kimtech XY Medium</h2>
-                    <p><b>Typ: </b>Vattenskärmaskin</p>
-                    <p><b>Tryck: </b>60,000 PSI</p>
-                    <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
-                    <p><b>Skärmunstycken: </b>1st</p>
+                    <div>
+                        <h3>Vattenskärning</h3>
+                        <h2>Kimtech XY Medium</h2>
+                        <p><b>Typ: </b>Vattenskärmaskin</p>
+                        <p><b>Tryck: </b>60,000 PSI</p>
+                        <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
+                        <p><b>Skärmunstycken: </b>1st</p>
+                        <p>Skär material upp till 200mm</p>
+                    </div>
                 </div>
             </div>
             <hr>
 
             <div class="machine-content" id="kimtech-xy-small">
                 <div class="machine-txt-container">
-                    <h3>Vattenskärning</h3>
-                    <h2>Kimtech XY Small</h2>
-                    <p><b>Typ: </b>Vattenskärmaskin</p>
-                    <p><b>Tryck: </b>60,000 PSI</p>
-                    <p><b>Skäryta: </b>Max 2000 x 1000 mm</p>
-                    <p><b>Skärmunstycken: </b>1st</p>
+                    <div>
+                        <h3>Vattenskärning</h3>
+                        <h2>Kimtech XY Small</h2>
+                        <p><b>Typ: </b>Vattenskärmaskin</p>
+                        <p><b>Tryck: </b>60,000 PSI</p>
+                        <p><b>Skäryta: </b>Max 2000 x 1000 mm</p>
+                        <p><b>Skärmunstycken: </b>1st</p>
+                        <p>Skär material upp till 200mm</p>
+                    </div>
                 </div>
 
                 <div class="machine-img-container">
@@ -206,25 +255,30 @@
                 </div>
 
                 <div class="machine-txt-container">
-                    <h3>Laserskärning</h3>
-                    <h2>Prima Platino CP400</h2>
-                    <p><b>Typ: </b>Laserskärmaskin (CO<sup>2</sup>)</p>
-                    <p><b>Effekt: </b>4 kW</p>
-                    <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
-                    <p>Skär olegerat/låglegerat upp till 20mm, rostfritt upp till 8mm.</p>
+                    <div>
+                        <h3>Laserskärning</h3>
+                        <h2>Prima Platino CP400</h2>
+                        <p><b>Typ: </b>Laserskärmaskin (CO<sup>2</sup>)</p>
+                        <p><b>Effekt: </b>4 kW</p>
+                        <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
+                        <p>Skär olegerat / låglegerat stål upp till 20mm, rostfritt upp till 8mm.</p>
+                    </div>
                 </div>
             </div>
             <hr>
 
+
             <div class="machine-content" id="amada-ensis-3015-aj">
                 <div class="machine-txt-container">
-                    <h3>Laserskärning</h3>
-                    <h2>AMADA ENSIS 3015 AJ</h2>
-                    <p><b>Typ: </b>Laserskärmaskin (Fiber)</p>
-                    <p><b>Effekt: </b>3 kW</p>
-                    <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
-                    <p>Skär olegerat/låglegerat upp till 20mm, rostfritt upp till 10mm.</p>
-                    <p>Våran fiberlaser är även utrustad med ett materialtorn för stora serier.</p>
+                    <div>
+                        <h3>Laserskärning</h3>
+                        <h2>AMADA ENSIS 3015 AJ</h2>
+                        <p><b>Typ: </b>Laserskärmaskin (Fiber)</p>
+                        <p><b>Effekt: </b>3 kW</p>
+                        <p><b>Skäryta: </b>Max 3000 x 1500 mm</p>
+                        <p>Skär olegerat / låglegerat stål upp till 20mm, rostfritt upp till 10mm.</p>
+                        <p>Vår fiberlaser är även utrustad med ett materialtorn för stora serier.</p>
+                    </div>
                 </div>
                 
                 <div class="machine-img-container">
@@ -241,25 +295,29 @@
                 </div>
 
                 <div class="machine-txt-container">
-                    <h3>Gas- & Plasmaskärning</h3>
-                    <h2>Baykal HYPERTHERM 260XD</h2>
-                    <p><b>Typ: </b>Gas- och plasmaskärmaskin</p>
-                    <p><b>Effekt: </b>Max 260 A</p>
-                    <p><b>Skäryta: </b>Max 6000 x 3000 mm</p>
-                    <p><b>Plasma: </b>Skär olegerat/låglegerat stål upp till 45mm, rostfritt upp till 30mm.</p>
-                    <p><b>Gas: </b>Skär olegerat stål upp till 150mm</p>
+                    <div>
+                        <h3>Gas- & Plasmaskärning</h3>
+                        <h2>Baykal HYPERTHERM 260XD</h2>
+                        <p><b>Typ: </b>Gas- och plasmaskärmaskin</p>
+                        <p><b>Effekt: </b>Max 260 A</p>
+                        <p><b>Skäryta: </b>Max 6000 x 3000 mm</p>
+                        <p><b>Plasma: </b>Skär olegerat / låglegerat stål upp till 45mm.</p>
+                        <p><b>Gas: </b>Skär olegerat stål upp till 150mm</p>
+                    </div>
                 </div>
             </div>
             <hr>
 
             <div class="machine-content" id="amada-hfe-3i-2204">
                 <div class="machine-txt-container">
-                    <h3>Kantpressning</h3>
-                    <h2>AMADA HFE 3i 2204</h2>
-                    <p><b>Typ: </b>Kantpress</p>
-                    <p><b>Kraft: </b>Max 220 TON</p>
-                    <p><b>Bocklängd: </b>Max 4000mm *</p>
-                    <p><i>* = Gäller inte alla godstjocklekar och material.</i></p>
+                    <div>
+                        <h3>Kantpressning</h3>
+                        <h2>AMADA HFE 3i 2204</h2>
+                        <p><b>Typ: </b>Kantpress</p>
+                        <p><b>Kraft: </b>Max 220 TON</p>
+                        <p><b>Bocklängd: </b>Max 4000mm *</p>
+                        <p><sub>* = Gäller inte alla godstjocklekar och material.</sub></p>
+                    </div>
                 </div>
 
                 <div class="machine-img-container">
@@ -276,12 +334,14 @@
                 </div>
 
                 <div class="machine-txt-container">
-                    <h3>Rundvalsning</h3>
-                    <h2>Sahinler 4R HS 30-260</h2>
-                    <p><b>Typ: </b>Rundvals</p>
-                    <p><b>Motorkraft: </b>7.5 kW</p>
-                    <p><b>Rullängd: </b>Max 3100mm</p>
-                    <p>Kan rulla olika stålsorter upp till 10mm.</p>
+                    <div>
+                        <h3>Rundvalsning</h3>
+                        <h2>Sahinler 4R HS 30-260</h2>
+                        <p><b>Typ: </b>Rundvals</p>
+                        <p><b>Motorkraft: </b>7.5 kW</p>
+                        <p><b>Rullängd: </b>Max 3100mm</p>
+                        <p>Kan rulla olika stålsorter upp till 10mm.</p>
+                    </div>
                 </div>
             </div>
 
@@ -364,6 +424,7 @@
     <script src="js/rellax.min.js"></script>
     <script src="js/initiate-sp.js"></script>
     <script src="js/ScrollMagic.min.local.js"></script>
+    <script src="js/scrollspy.js"></script>
     <script src="js/init-scrollmagic.js" async="true"></script>
     <script type="module">
         import PhotoSwipeLightbox from './photoswipe/photoswipe-lightbox.esm.min.js';
