--- a/tillagg.html
+++ b/tillagg.html
@@ -5,8 +5,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
     </style>
 
-    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
+    <link rel="stylesheet" href="css/styles.css">
 
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
@@ -16,12 +15,23 @@
 
     <link rel="preload" href="./photoswipe/photoswipe-dynamic-caption-plugin.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="./photoswipe/photoswipe-dynamic-caption-plugin.css"></noscript> -->
+    
+    <title>Ekshärads Water Jet AB - Tillägg</title>
+    <meta name="description" content="I tillägg till våra skärtjänster så erbjuder vi även rullning, bocking och svetsning samt andra typer av bearbetning i små till medelstora serier.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ewj.nu/">
+    <meta property="og:title" content="Ekshärads Water Jet  AB">
+    <meta property="og:description" content="I tillägg till våra skärtjänster så erbjuder vi även rullning, bocking och svetsning samt andra typer av bearbetning i små till medelstora serier.">
+    <meta property="og:image" content="twitter-logo.jpg">
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I tillägg till våra skärtjänster så erbjuder vi även rullning, bocking och svetsning i små till medelstora serier.">
-    <title>Ekshärads Water Jet AB</title>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ewj.nu/">
+    <meta property="twitter:title" content="Ekshärads Water Jet  AB">
+    <meta property="twitter:description" content="I tillägg till våra skärtjänster så erbjuder vi även rullning, bocking och svetsning samt andra typer av bearbetning i små till medelstora serier.">
+    <meta property="twitter:image" content="twitter-logo.jpg">
 </head>
 <body>
     <sc-excep>Please use a device with larger screen to view the content.<hr></sc-excep>
@@ -49,7 +59,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Bearbetning</a>
+                        <a id="de">Bearbetning</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -73,7 +83,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Maskinpark</a>
+                        <a id="de">Maskinpark</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -113,7 +123,7 @@
                     </li>
 
                     <li>
-                        <a href="#" id="de">Företaget</a>
+                        <a id="de">Företaget</a>
                         <div class="dropdown">
                             <ul>
                                 <li>
@@ -160,6 +170,9 @@
                     <a href="#process-rullning">Rullning</a>
                 </li>
                 <li>
+                    <a href="#process-annat">Annat</a>
+                </li>
+                <li>
                     <a href="#">Bildgalleri</a>
                 </li>
                 <li>
@@ -195,8 +208,8 @@
             <div id="process-rullning">
                 <div class="hS">Bearbetning</div>
                 <h1>Rullning</h1>
-                <p>Under rullningsprocessen så klämms materialet mellan två huvudrullar och blir formade utav två formrullar som pressas mot arbetsstycket. Det är kraften och avståndet mellan formrulle och huvudrulle som bestämmer radien på det rullbockade materialet.</p>
-                <p>Med våran rullbockmaskin kan vi rulla plåt upp till 10mm i godstjocklek och med en maxradie upp till 1500mm och en minimumradie på 300mm > 2mm godstjocklek.</p>
+                <p>Under rullningsprocessen så klämms materialet mellan två huvudrullar och blir formade utav två formrullar som pressas mot arbetsstycket. Det är kraften och avståndet mellan formrulle och huvudrulle som bestämmer radien på det rundvalsade materialet.</p>
+                <p>Med våran rundvals kan vi rulla plåt upp till 10mm i godstjocklek och med en maxradie upp till 1500mm och en minimumradie på 300mm > 2mm godstjocklek. Vi har även möjlighet att rulla mindre radier men då i tunnare gods, samt att vi har möjlighet att rulla diverse rör och profiler.</p>
                 <p>Rullning kan göras i de flesta metalliska material.</p>
 
                 <p>Kontakta oss om du vill veta mer om vad vi kan göra i tillägg till skärtjänsterna.</p>
@@ -206,6 +219,18 @@
 
                 <div class="rellax speckle second" data-rellax-speed="3" data-rellax-xs-speed="0" data-rellax-mobile-speed="0" data-rellax-tablet-speed="0">
                 </div>
+            </div>
+
+            <hr>
+
+            <div id="process-annat">
+                <div class="hS">Bearbetning</div>
+                <h1>Annat</h1>
+                <p>Utöver våra preliminära tillägg så har vi även möjligheten att borra, gänga och försänka, fräsa och svarva.</p>
+                <p>Vi har även möjlighet att blästra, slipa, pulverlackare, anodizera med mera.</p>
+                <p>Vi på Ekshärads Water Jet siktar på att vara en så komplett lösning för våra kunder som möjligt. Hör av er så skräddarsyr vi en helhetslösning för era projekt*.</p>
+
+                <sub>* = Vi åtar oss endast arbete gällande framtagning av objekt och konstruktioner, d.v.s att vi inte står för montage, underhåll eller dylikt.</sub>
             </div>
             <h2 id="galleri">Galleri</h2>
         </div>
