--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -38,9 +38,9 @@
     <meta property="twitter:image" content="twitter-logo.jpg">
 </head>
 <body>
-    <sc-excep>Please use a device with larger screen to view the content.<hr></sc-excep>
-    <sc-excep>Använd en enhet med större skärm för att se innehållet.</sc-excep>
-    <screenwrapper>
+    <div class="sc-excep">Please use a device with larger screen to view the content.<hr></div>
+    <div class="sc-excep">Använd en enhet med större skärm för att se innehållet.</div>
+    <div class="screenwrapper">
     <div class="navbar">
         <div class="navbar-container">
             <div class="navbar-items">
@@ -397,7 +397,7 @@
             <xf5>2022</xf5>
         </div>       
     </footer>
-</screenwrapper>
+</div>
     <script src="js/data-scroll.js"></script>
     <script src="js/main.js"></script>
     <script src="js/rellax.min.js"></script>
