--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <style>.landing {background:linear-gradient(90deg, var(--landing-bg-color-one), var(--landing-bg-color-two)), url('img/landing_img.jpg');background-blend-mode: darken;background-position: 20% 0%;background-repeat: no-repeat;background-size: cover;}</style>
 </head>
 <body>
-    <sc-excep>Please use a device with larger screen to view the content.<hr></sc-excep>
-    <sc-excep>Använd en enhet med större skärm för att se innehållet.</sc-excep>
-    <screenwrapper>
+    <div class="sc-excep">Please use a device with larger screen to view the content.<hr></div>
+    <div class="sc-excep">Använd en enhet med större skärm för att se innehållet.</div>
+    <div class="screenwrapper">
     <div class="navbar">
         <div class="navbar-container">
             <div class="navbar-items">
@@ -515,7 +515,7 @@
             <xf5>2022</xf5>
         </div>       
     </footer>
-</screenwrapper>
+</div>
     <script src="js/data-scroll.js"></script>
     <script src="js/main.js"></script>
     <script src="js/text-switch.js"></script> 
