--- a/laser.html
+++ b/laser.html
@@ -127,27 +127,7 @@
                     </li>
 
                     <li>
-                        <a id="de">Företaget</a>
-                        <div class="dropdown">
-                            <ul>
-                                <li>
-                                    <a href="#">Kvalitetspolicy</a>
-                                </li>
-
-                                <li>
-                                    <a href="#">Miljöpolicy</a>
-                                </li>
-
-                                <li>
-                                    <a href="#">Varför EWJ?</a>
-                                </li>
-
-                                <li>
-                                    <a href="#">Personal</a>
-                                </li>
-                            </ul>
-                            <button class="dropdown-btn">Tillbaka</button>
-                        </div>
+                        <a href="foretaget.html">Företaget</a>
                     </li>
 
                     <li>
@@ -367,23 +347,20 @@
                 <h3>Information</h3>
                 <ul>
                     <li>
-                        <a href="index.html#om_oss">Om oss</a>
+                        <a href="foretaget.html#om_oss">Om oss</a>
                     </li>
                     <li>
-                        <a href="#">Kvalitetspolicy</a>
+                        <a href="foretaget.html#policy">Policy</a>
                     </li>
                     <li>
-                        <a href="#">Miljöpolicy</a>
-                    </li>
-                    <li>
-                        <a href="#">Personal</a>
+                        <a href="maskinpark.html">Maskinpark</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="copyright">
-            <xf5>© Ekshärads Water Jet AB</xf5>
-            <xf5>2022</xf5>
+            <div class="xf5">© Ekshärads Water Jet AB</div>
+            <div class="xf5">2022</div>
         </div>       
     </footer>
 </div>
