--- a/gas-plasma.html
+++ b/gas-plasma.html
@@ -26,14 +26,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ewj.nu/">
-    <meta property="og:title" content="Ekshärads Water Jet  AB">
+    <meta property="og:title" content="Ekshärads Water Jet AB">
     <meta property="og:description" content="Vi skär med gas och plasma för snabb framtagning av grova ämnen.">
     <meta property="og:image" content="twitter-logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ewj.nu/">
-    <meta property="twitter:title" content="Ekshärads Water Jet  AB">
+    <meta property="twitter:title" content="Ekshärads Water Jet AB">
     <meta property="twitter:description" content="Vi skär med gas och plasma för snabb framtagning av grova ämnen.">
     <meta property="twitter:image" content="twitter-logo.jpg">
 </head>
@@ -131,7 +131,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Kontakt</a>
+                        <a href="kontakt.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
