--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ewj.nu/">
-    <meta property="og:title" content="Ekshärads Water Jet  AB">
+    <meta property="og:title" content="Ekshärads Water Jet AB">
     <meta property="og:description" content="Ekshärads Water Jet AB är en ledande leverantör av legobaserade skärtjänster med laser-, vatten-, gas- och plasmaskärning.">
     <meta property="og:image" content="twitter-logo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://ewj.nu/">
-    <meta property="twitter:title" content="Ekshärads Water Jet  AB">
+    <meta property="twitter:title" content="Ekshärads Water Jet AB">
     <meta property="twitter:description" content="Ekshärads Water Jet AB är en ledande leverantör av legobaserade skärtjänster med laser-, vatten-, gas- och plasmaskärning.">
     <meta property="twitter:image" content="twitter-logo.jpg">
     
-    <style>.landing {background:linear-gradient(90deg, var(--landing-bg-color-one), var(--landing-bg-color-two)), url('img/landing_img.jpg');background-blend-mode: darken;background-position: 20% 0%;background-repeat: no-repeat;background-size: cover;}</style>
+    <style>.landing {background:linear-gradient(90deg, var(--landing-bg-color-one), var(--landing-bg-color-two)), url('img/landing_img.jpg');background-blend-mode: hard-light;background-position: 20% 0%;background-repeat: no-repeat;background-size: cover;}</style>
 </head>
 <body>
     <div class="sc-excep">Please use a device with larger screen to view the content.<hr></div>
@@ -126,7 +126,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Kontakt</a>
+                        <a href="kontakt.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -197,7 +197,7 @@
             <div class="percs-content">
                 <p>Snabba</p>
                 <p>Pålitliga</p>
-                <p>Kostnadseffektiva</p>
+                <p>Kostnadseffektiva</p> 
             </div>
             <div class="percs-ft">
                 <p class="hS">Ekshärads Water Jet</p>
