--- a/maskinpark.html
+++ b/maskinpark.html
@@ -10,17 +10,32 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"></noscript>
 
-    <link rel="preload" href="./photoswipe/photoswipe.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <!-- <link rel="preload" href="./photoswipe/photoswipe.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="./photoswipe/photoswipe.css"></noscript>
 
     <link rel="preload" href="./photoswipe/photoswipe-dynamic-caption-plugin.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="./photoswipe/photoswipe-dynamic-caption-plugin.css"></noscript>
+    <noscript><link rel="stylesheet" href="./photoswipe/photoswipe-dynamic-caption-plugin.css"></noscript> -->
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Laserskärtekniken klarar snabba omställningar vilket ger flexibilitet i produktionen.">
-    <title>Ekshärads Water Jet AB</title>
+    
+    <title>Ekshärads Water Jet AB - Maskinpark</title>
+    <meta name="description" content="Med en god uppsättning maskiner klarar vi det mesta.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ewj.nu/">
+    <meta property="og:title" content="Ekshärads Water Jet AB">
+    <meta property="og:description" content="Med en god uppsättning maskiner klarar vi det mesta.">
+    <meta property="og:image" content="twitter-logo.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ewj.nu/">
+    <meta property="twitter:title" content="Ekshärads Water Jet AB">
+    <meta property="twitter:description" content="Med en god uppsättning maskiner klarar vi det mesta.">
+    <meta property="twitter:image" content="twitter-logo.jpg">
 </head>
 <body>
     <div class="sc-excep">Please use a device with larger screen to view the content.<hr></div>
@@ -116,7 +131,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Kontakt</a>
+                        <a href="kontakt.html">Kontakt</a>
                     </li>
                 </ul>
             </div>
