--- a/kontakt.html
+++ b/kontakt.html
@@ -127,11 +127,11 @@
                     </li>
 
                     <li>
-                        <a href="#">Företaget</a>
+                        <a href="foretaget.html">Företaget</a>
                     </li>
 
                     <li>
-                        <a href="kontakt.html">Kontakt</a>
+                        <a href="#">Kontakt</a>
                     </li>
                 </ul>
             </div>
@@ -141,166 +141,47 @@
     <section class="company-heading foretaget-section"></section>
 
 <div class="empty-wrapper">
-    <section class="about-section" id="om_oss">
-        <div class="main-container">
+    <section class="contact-section">
+        <div class="contact-container">
+            <div class="hS">Information</div>
+            <h1>Kontakt</h1>
 
-            <div class="hS">EST. 2000</div>
-            <h1>Våra verktyg är eld & vatten</h1>
-        
-            <p><b>Ekshärads Water Jet är en ledande leverantör av legobaserade skärtjänster med laser, vatten, gas och plasma. Valet av lämplig metod beror på en kombination av seriestorlek, tid och vilket material som ska skäras. 
-                Vi hjälper dig med  bedömningen så att din produkt får rätt kvalitet till rätt pris.</b></p>
-            <p>Tack vare ett välfyllt lager, med de flesta förekommande dimensionerna av plåt, kan vi hålla mycket snabba leveranstider. Vi på Ekshärads Water Jet är flexibla, vi vill ge våra kunder det de söker. Det spelar ingen roll hur komplicerad detaljen är - vi anpassar oss.</p>
-            <p>Våra moderna, NC-styrda skärmaskiner klarar det mesta, komplexa figurer med snäva toleranser, runda, ovala, fyrkantiga hål i tunna och grova dimensioner, alltid med högt materialutnyttjande. Beroende på hur dina underlag ser ut importerar vi, alternativt skapar från din skiss, digitala CAD-ritningar som konverteras till NC-kod för styrning av skärmaskinerna.</p>
-
-        <div class="iframe-main">
-            <iframe title="Ekshärads Water Jet AB"allowfullscreen allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" sandbox="allow-scripts allow-same-origin" src="data:text/html,<meta charset=UTF-8><style scoped>a{height:100%25;display:block;background:center/contain no-repeat black;background-image:linear-gradient(rgba(0,0,0,0.7),transparent 25%25,transparent),url(https://i.ytimg.com/vi/YqZNkb2RSqc/maxres3.jpg)}a:hover .b{fill:red;opacity:1}svg{position:absolute;left:50%25;top:50%25;width:68px;height:48px;margin-left:-34px;margin-top:-24px}a{font-family:%22YouTube Noto%22,Roboto,Arial,Helvetica,sans-serif;color:white;text-decoration:0}h1{font-size:18px;margin:0;padding:1em;font-weight:normal;text-overflow:ellipsis;white-space:nowrap;overflow:hidden}</style><a href=https://www.youtube-nocookie.com/embed/YqZNkb2RSqc?modestbranding=1&showinfo=1&rel=1&autoplay=1><h1>Ekshärads Water Jet AB</h1><svg viewBox=%220 0 68 48%22><path class=b fill=%23222 opacity=.8 d=%22M67 8c-1-3-3-6-6-6-5-2-27-2-27-2S12 0 7 2C4 2 2 5 1 8L0 24l1 16c1 3 3 6 6 6 5 2 27 2 27 2s22 0 27-2c3 0 5-3 6-6l1-16-1-16z%22/><path d=%22M45 24L27 14v20%22fill=%23fff>" width=560 height=315 frameborder=0></iframe>
-        </div>
-    </div>
-
-    <div class="timeline-container">
-
-        <div class="smooth-in">
-            <div class="hS">Tidslinje</div>
-            <h1>Vår resa</h1>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p><b>EWJ</b> startar upp i Hagfors, Värmland.</p>
-            </div>
-            <div class="year">
-                <p>2000</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>Tidslinjeobjekt.</p>
-            </div>
-            <div class="year">
-                <p>2008</p>
-                <div class="spacer"></div>
-            </div>    
+            <h2>Telefon</h2>
+            <p>0563-12220</p>
+            <br>
+            <h2>E-mail</h2>
+            <p>info@ewj.nu</p>
+            <br>
+            <h2>Adress</h2>
+            <p>Uvedsvägen 9</p>
+            <p>683 33, Hagfors</p>
+            <br>
+            <p>Skicka gärna frågor gällande offerter, våra möjligheter, era projekt bland annat så hjälper vi er!</p>
+            <br>
+            <h2>Hoppas vi hörs!</h2>
+            <br>
+            <hr>
+            <br>
+            <h3>Att tänka på inför offertförfrågningar;</h3>
+            <ul>
+                <li>Offertförfrågningar sker enklast via mail men kan även tas muntligt på plats eller över telefon.</li>
+                <br>
+                <li>Skicka med filer så som .DXF, .STEP, .SLDPRT, .X_T, .DWG etc för att få svar snabbare.</li>
+                <br>
+                <li>Vi kan hantera hela 3D-sammanställningar.</li>
+                <br>
+                <li>Vi hanterar och konverterar skisser och pappersritningar.</li>
+                <br>
+                <li>Det kan ta upp mot en vecka för att få svar, beroende på bl.a underlag och komplexitet.</li>
+            </ul>
         </div>
 
-        <div class="timeline-object">
-            <div class="text">
-                <p>Tidslinjeobjekt.</p>
-            </div>
-            <div class="year">
-                <p>2010</p>
-                <div class="spacer"></div>
-            </div> 
+        <div class="map-container">
+            <div class="hS">Karta</div>
+            <h1>Hitta oss</h1>
+            <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Uvedsv%C3%A4gen%209,%20683%2033&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>Tidslinjeobjekt.</p>
-            </div>
-            <div class="year">
-                <p>2012</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>Tidslinjeobjekt.</p>
-            </div>
-            <div class="year">
-                <p>2013</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>Tidslinjeobjekt.</p>
-            </div>
-            <div class="year">
-                <p>2016</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>Laserskärningsparken utökas med inköp av <b>AMADA ENSIS 3015 AJ</b> samt att EWJ flyttar till större lokaler.</p>
-            </div>
-            <div class="year">
-                <p>2018</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-
-        <div class="timeline-object">
-            <div class="text">
-                <p>EWJ köper in <b>AMADA HFE 3i 2204</b> kantpress för att utöka bockningskapaciteten.</p>
-            </div>
-            <div class="year">
-                <p>2022</p>
-                <div class="spacer"></div>
-            </div>
-        </div>
-    </div>
 </section>
-
-    <section class="company-section" id="policy">
-        <div class="policy">
-            <h2>Kvalitetspolicy</h2>
-            <p>Ekshärads Water Jet AB:s huvudsakliga verksamhet är vattenskärning i alla typer av material. Vårt mål är att alltid stå för korta ledtider, tillverka rätt produkt enligt kundens önskemål samt leverera produkten i rätt tid.</p>
-            <p class="hS">Våra ledstjärnor är:</p>
-            <ul>
-                <li>
-                    <p>Att rätt kvalitet i allt arbete skall vara vårt viktigaste konkurrensmedel.</p>
-                </li>
-
-                <li>
-                    <p>Att från början göra rätt och leverera i rätt tid gäller för allt arbete i företaget.</p>
-                </li>
-
-                <li>
-                    <p>Att vi skall vara genuina partners för våra kunder och väl motsvara deras krav och förväntningar.</p>
-                </li>
-
-                <li>
-                    <p>Att varje medarbetare är ansvarig för att rätt kvalitet och företagets mål uppnås.</p>
-                </li>
-
-                <li>
-                    <p>Att vi genomför kontinuerlig utveckling och förbättring av verksamheten bl.a. genom att förebygga och förhindra upprepning av störningar i organisationen.</p>
-                </li>
-            </ul>
-        </div>
-
-        <div class="policy">
-            <h2>Miljöpolicy</h2>
-            <p>Vi ser det som en självklarhet i vår verksamhet att minska negativ miljöpåverkan samt att det är vår skyldighet att påverka och stötta våra underleverantörer i deras miljöarbete.</p>
-            <p class="hS">Våra ledstjärnor är:</p>
-            <ul>
-                <li>
-                    <p>Att ur miljösynpunkt ständigt förbättra och utveckla verksamheten samt att förebygga uppkomsten av föroreningar.</p>
-                </li>
-
-                <li>
-                    <p>Att som minimum följa gällande miljölagstiftning samt de förordningar som gäller inom vårt verksamhetsområde.</p>
-                </li>
-
-                <li>
-                    <p>Att löpande analysera och utvärdera våra processer beträffande företagets arbete med ständiga förbättringar av verksamhetens miljöpåverkan.</p>
-                </li>
-
-                <li>
-                    <p>Att välja de leverantörer som i största möjliga mån aktivt arbetar med miljöarbete.</p>
-                </li>
-
-                <li>
-                    <p>Att kommunicera vår policy främst till våra kunder och leverantörer samt till de yttre intressenter som är intresserade av vårt miljöarbete.</p>
-                </li>
-            </ul>
-        </div>
-    </section>
 </div>
 
     <footer>
